--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
 </section>
 <!-------CLIENTS------->
 <section class="clients">
+<div class="container">
     <h2 class="clients-title">Постоянные клиенты</h2>
     <ul class="clients-list list">
 
@@ -323,14 +324,15 @@
 
 
 </ul>
+</div>
 </section>
 
 </main>
 
 <!-----FOOTER------->
         <footer class="footer">
-            <div class="footer-container">
-            <div class="container container-address">
+            <div class="footer-container container">
+            <div class=" container-address">
             <a class="footer-logo" href="/index.html"> Web<span class="footer-span">Studio</span>
             </a>
             <address class="footer-address">
@@ -351,7 +353,7 @@
             </ul>
             </address>
         </div>
-        <div class=" container container-cos">
+        <div class=" container-cos">
             <h2 class="footer-addition-title">присоединяйтесь</h2>
             <ul class="footer-list-cos list">
                 <li class="footer-addition-item"><a class="footer-link-cos"  href="">
@@ -363,7 +365,7 @@
                 </li>
                 <li class="footer-addition-item"><a class="footer-link-cos"  href="">
                     <svg class="team-cos-icon" weight="20" height="20">
-                       <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                       <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                </svg>
 
                 </a>
@@ -371,7 +373,7 @@
 
                 <li class="footer-addition-item"><a class="footer-link-cos"  href="">
                     <svg class="team-cos-icon" weight="20" height="20">
-                       <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                       <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                </svg>
 
                 </a>
@@ -379,7 +381,7 @@
 
                 <li class="footer-addition-item"><a class="footer-link-cos"  href="">
                     <svg class="team-cos-icon" weight="20" height="20">
-                       <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                       <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                </svg>
 
                 </a>
